[metadata]
name = confluence
author = Sorin Sbarnea
author-email = sorin.sbarnea@gmail.com
maintainer = Sorin Sbarnea
maintainer-email = sorin.sbarnea@gmail.com
summary = Python library for working with Atlassian Confluence API.
description-file = README.rst
home-page = https://github.com/pycontribs/confluence
license = BSD
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: Other Environment
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Internet :: WWW/HTTP

keywords =
    api
    atlassian
    confluence
    rest
    web
    rest

[files]
packages =
    confluence
[egg_info]
egg_base = .

[aliases]
test=pytest

[bdist_wheel]
universal = 1

[build_sphinx]
source-dir = docs/
build-dir  = docs/_build
all_files  = 1

[upload_sphinx]
upload-dir = docs/_build/html

[flake8]
max-line-length=160
exclude=build,.eggs,docs/conf.py,.tox
statistics=yes
ignore = D100,D101,D102,D103,D104,D105,D200,D202,D203,D204,D205,D207,D210,D211,D300,D301,D400,D401

[pep8]
exclude=build,lib,.tox,third,*.egg,docs,packages,.eggs
;filename=
;select
ignore=E501,E265,E402
max-line-length=160
count=1
;format
;quiet
;show-pep8
;show-source
statistics=1
;verbose=1

;PEP8_OPTS="--filename=*.py  --exclude=lib --ignore=E501 scripts"
;pep8 $PEP8_OPTS --show-source --repeat
;pep8 --statistics -qq $PEP8_OPTS

[pbr]
warnerrors = true

[pycodestyle]
max-line-length=160
exclude = .eggs,.tox,build
